# CircuitPython_CST816

./: LICENSE  README.rst  README.rst.license  cst816.py  pyproject.toml  requirements.txt
.github/workflows/: release_gh.yml
examples/: cst816_simpletest.py
