# SPDX-FileCopyrightText: Copyright (c) 2023 NeoStormer
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-cst816"
description = "CircuitPython driver for the CST816 capacitive touch screen IC"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "NeoStormer"}
]
urls = {Homepage = "https://github.com/NeoStormer/CircuitPython_CST816"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "cst816",
    "CST816,",
    "CST816S,",
    "CST816T,",
    "touch,",
    "display,",
    "driver",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["cst816"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
